[package]
name = "clockor"
version = "0.1.0"
edition = "2021"
description = "Fullscreen game clock overlay for Windows"
authors = ["imonoonoko"]
license = "MIT"
repository = "https://github.com/imonoonoko/ClockOR"
readme = "README.md"
keywords = ["clock", "overlay", "gaming", "windows", "tray"]
categories = ["gui"]

[dependencies]
chrono = "0.4"
dirs = "5"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
eframe = "0.29"
tray-icon = "0.19"
muda = "0.15"

[dependencies.windows]
version = "0.58"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_System_Registry",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
]

[profile.release]
opt-level = "s"
lto = true
strip = true
